--- a/cpsaccades.html
+++ b/cpsaccades.html
@@ -13,8 +13,6 @@
 
 <body>
 
-  <div id="main" data-mark="">
-  </div>
   <div id="controls">
     <div id="settings">*SETTINGS*</div>
 
@@ -32,6 +30,7 @@
   </div>
 
 
+  <div id="main" data-mark=""></div>
   <button id="reload">Reload</button>
   <input type="checkbox" id="help" />
   <label for="help">Help</label>
@@ -43,6 +42,8 @@
     <h3>Usage</h3>
     Press the spacebar on the keyboard to display a new target marker in the central area.
   </label>
+
+
   <script>
 
     let colors = "red green orange brown #f96 purple #888 blue var(--fg)".split(" ");
