--- a/hartchart.html
+++ b/hartchart.html
@@ -49,6 +49,7 @@
       .slot {
         position: relative;
         text-align: center;
+        line-height: var(--basefont);
         /* grid layout takes care of size */
         /* width: var(--slotsize);
         height: var(--slotsize); */
