--- a/hartchart.html
+++ b/hartchart.html
@@ -27,24 +27,28 @@
       margin-left: 0.5em;
     }
 
-    #main {
-      position: relative;
-      --topgap: 4rem;
+    body {
+      --scale: 1;
+      --topgap: 2em;
       /* clamp(2.5rem, 2.5em, 10vh); */
       /* --slotsize: calc(var(--boxsize) / 10); */
-      --scale: 1;
-      --boxsize: calc(var(--scale) *min(calc(95vh - var(--topgap)), calc(95vw - var(--topgap))));
+      --boxsize: min(calc(95vh - var(--topgap)), calc(95vw - var(--topgap)));
       --basefont: calc(var(--boxsize) / 13);
+    }
+
+    #main {
+      position: relative;
       font-family: 'Times New Roman', Times, serif;
       height: var(--boxsize);
       width: var(--boxsize);
       font-size: var(--basefont);
-      top: var(--topgap);
+      top: 1em;
       display: grid;
       grid-template-columns: repeat(10, 1fr);
       grid-template-rows: repeat(10, 1fr);
       left: 50%;
-      transform: translate(-50%);
+      transform-origin: top;
+      transform: translate(-50%) scale(var(--scale));
 
       .slot {
         position: relative;
@@ -58,11 +62,12 @@
 
 
     #qrplace {
-      display: block;
-      position: absolute;
-      left: 50%;
+      display: inline-block;
+      position: relative;
+      text-align: center;
+      /* left: 50%;
       transform: translate(-50%);
-      top: 0.5em;
+      top: 0.5em; */
     }
 
     .qrcode {
@@ -73,6 +78,7 @@
       left: 50%;
       transform: translate(-50%);
       top: 1.5em;
+      z-index: 1000;
     }
 
     #qrtoggle:checked~.qrcode {
@@ -80,11 +86,63 @@
     }
 
     #boxscale {
-      transform: rotate(-90deg);
+      position: relative;
+      top: 1em;
+      left: 50%;
+      transform: translate(-50%);
+      display: table;
+    }
+
+    #boxscale::before,
+    #boxscale::after {
+      content: "A";
+      font-size: 100%;
+      display: block;
       position: absolute;
-      width: 12rem;
-      right: -4rem;
-      top: 13rem;
+      width: 1em;
+      height: 1em;
+      top: 50%;
+      transform: translate(0, -50%);
+    }
+
+    #boxscale::before {
+      left: -1.5em;
+    }
+
+    #boxscale::after {
+      font-size: 150%;
+      right:-1.5em;
+    }
+
+
+
+    #metrocheck {
+      display: none;
+    }
+
+    #metrocheck+label svg {
+      fill: var(--fg);
+      stroke: var(--fg);
+      width: 1.5em;
+      height: 1.5em;
+      vertical-align: middle;
+    }
+
+
+    #metrocheck:checked+label #metro_on {
+      display: inline-block;
+    }
+
+    #metrocheck:checked+label #metro_off {
+      display: none;
+    }
+
+    #metrocheck:not(:checked)+label #metro_on {
+      display: none;
+    }
+
+    #metrocheck:not(:checked)+label #metro_off {
+      display: inline-block;
     }
   </style>
   <!-- https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/ -->
@@ -97,20 +155,34 @@
   <!-- TODO
   QR code for mobile app to show mini version
  -->
-
-  <div id="controls">
-    <div id="settings">*SETTINGS*</div>
-
+  <div id="ctrlbar">
     <div><input type="checkbox" class="slider" id="darkmode" checked="checked" /><label for="darkmode">Dark mode</label></div>
-    <button id="metronome">metronome</button><br />
-    <div id="tapp">TAP</div><input type="text" id="bpm" /><br />
+
+
+    <div>
+      <div id="tapp">TAP</div><input type="text" id="bpm" value="60" />
+      <input type="checkbox" id="metrocheck"><label for="metrocheck">
+        <svg id="metro_on" xmlns="http://www.w3.org/2000/svg" version="1.0" width="500" height="500" viewBox="0 0 75 75">
+          <path d="M39.389,13.769 L22.235,28.606 L6,28.606 L6,47.699 L21.989,47.699 L39.389,62.75 L39.389,13.769z" style="stroke-width:5;stroke-linejoin:round;" />
+          <path d="M48,27.6a19.5,19.5 0 0 1 0,21.4M55.1,20.5a30,30 0 0 1 0,35.6M61.6,14a38.8,38.8 0 0 1 0,48.6" style="fill:none;stroke-width:5;stroke-linecap:round" />
+        </svg>
+
+        <svg id="metro_off" xmlns="http://www.w3.org/2000/svg" version="1.0" width="500" height="500" viewBox="0 0 75 75" stroke-width="5">
+          <path d="m39,14-17,15H6V48H22l17,15z" stroke-linejoin="round" />
+          <path d="m49,26 20,24m0-24-20,24" fill="none" stroke-linecap="round" />
+        </svg>
+      </label>
+    </div>
+
+
+    <div id="qrplace"></div>
+
+
+    <button id="reload">Reload</button>
 
   </div>
-  <div id="qrplace"></div>
 
-  <button id="reload">Reload</button>
-
-  <input type="range" id="boxscale" max="1" min="0.3" value="1" step="0.01" />
+  <div id="boxscale"><input type="range" id="scale" max="1" min="0.3" value="1" step="0.01" /></div>
 
   <div id="main" data-mark="">
   </div>
@@ -121,10 +193,10 @@
     let main = document.querySelector("#main");
 
 
-    document.querySelector("#boxscale").oninput = function (e) {
+    document.querySelector("input#scale").oninput = function (e) {
       console.log(this.value);
 
-      main.style.setProperty('--scale', this.value);
+      document.body.style.setProperty('--scale', this.value);
     };
 
 
