--- a/hartchart.html
+++ b/hartchart.html
@@ -111,7 +111,7 @@
 
     #boxscale::after {
       font-size: 150%;
-      right:-1.5em;
+      right: -1.5em;
     }
 
 
@@ -144,6 +144,7 @@
     #metrocheck:not(:checked)+label #metro_off {
       display: inline-block;
     }
+
   </style>
   <!-- https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/ -->
   <!-- https://dev.to/murtuzaalisurti/how-to-make-a-qr-code-generator-using-vanilla-javascript-3cla -->
@@ -156,6 +157,8 @@
   QR code for mobile app to show mini version
  -->
   <div id="ctrlbar">
+    <div><a href="index.html"><img id="homeicon" src="home.svg" alt="home" /></a></div>
+
     <div><input type="checkbox" class="slider" id="darkmode" checked="checked" /><label for="darkmode">Dark mode</label></div>
 
 
