--- a/lettertracking.html
+++ b/lettertracking.html
@@ -101,6 +101,8 @@
 
 <body>
   <div id="ctrlbar">
+    <div><a href="index.html"><img id="homeicon" src="home.svg" alt="home" /></a></div>
+
     <div><input type="checkbox" class="slider" id="darkmode" /><label class="button" for="darkmode">Dark mode</label></div>
 
     <div>
