Update page title
"Vision therapy tools"

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vision tools</title>
+  <title>Vision therapy tools</title>
   <meta name="darkreader-lock">
 
   <link rel="stylesheet" href="vision.css">
