--- a/lettertracking.html
+++ b/lettertracking.html
@@ -96,6 +96,11 @@
       display: inline-block;
       text-align: center;
     }
+
+@media print {
+#output {margin: 1em 4em 1em 3.5em; }
+#ctrlbar, #controls,#timer {display:none}
+}
   </style>
 </head>
 
