--- a/lettertracking.html
+++ b/lettertracking.html
@@ -87,8 +87,8 @@
 
 
 
-    #stopwatch+#timer {
-      font-size: 25pt;
+    #timer {
+      font-size: 20pt;
       margin-left: 2em;
       width: 7em;
       border: solid 1px;
