--- a/lettertracking.html
+++ b/lettertracking.html
@@ -285,6 +285,7 @@ if (checked) {
         return;
       }
       document.querySelector("#showsolution").checked = false;
+accents(false,"showsolution");
 
       let maxwords = 70;
 
