--- a/lettertracking.html
+++ b/lettertracking.html
@@ -398,6 +398,7 @@ wordssincemark++;
           // finished the exercise, stop timer
           stopwatch.click();
           document.querySelector("#showsolution").checked = true;
+accents(true,"showsolution");
         }
         console.log(selectedltrs.sort());
 
