--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     h2,
     h3 {
-      margin: 1.5em 0 0.25em;
+      margin: 1.5em 0 0.5em;
     }
 
     div {
@@ -29,12 +29,17 @@
     .plain {
       text-indent: 0;
     }
+
+    img {
+      vertical-align: middle;
+    }
   </style>
 </head>
 
 <body>
 
-  <h2>Vision Therapy exercises</h2>
+
+  <h2><img src="logo.svg" /> Vision Therapy exercises</h2>
   <div class="plain">
     This open-source project is a work in progress.<br />
     To view the code, contribute, or provide feedback, visit:<br />
