--- a/tranaglyph.html
+++ b/tranaglyph.html
@@ -79,7 +79,7 @@ margin: 0.5em 0 0 10%;
 
 }
 
-
+/*
 @media (prefers-color-scheme: dark) {
 #red {
 border-color: #880000;
@@ -90,7 +90,7 @@ border-color:#008000;
 }
 }
 
-
+*/
 
   </style>
 </head>
@@ -102,6 +102,14 @@ border-color:#008000;
 <div class="t greenblack">TEXT</div>
 <div class="t greenwhite">TEXT</div>
 -->
+
+
+
+  <div id="ctrlbar">
+    <div><a href="index.html"><img id="homeicon" src="home.svg" alt="home" /></a></div>
+<div><input type="checkbox" class="slider" id="darkmode" checked="checked" /><label for="darkmode">Dark mode</label></div>
+
+</div>
 
 <input type="range" id="slider" step="0.1" min="-10" max="10"/>
 <div id="circles">
