--- a/tranaglyph.html
+++ b/tranaglyph.html
@@ -8,7 +8,7 @@
   <meta name="darkreader-lock" />
 
   <link rel="stylesheet" href="vision.css" />
-  <!-- <script src="settings.js"></script> -->
+  <script src="settings.js"></script>
 <!-- use [data-theme="dark"] {} to set css theme colors
 keep colors out of JS
 https://stackoverflow.com/questions/56300132/how-to-override-css-prefers-color-scheme-setting
